--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: python
 python:
     - "3.6"
 install:
-    pip install -r requirements.txt
+    - pip install -r requirements.txt
+    - pip install codecov
 script: make test
+after_success:
+    - codecov
