--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,7 @@
     "python.unitTest.unittestEnabled": false,
     "python.unitTest.pyTestEnabled": true,
     "python.unitTest.nosetestsEnabled": false,
+    "python.unitTest.pyTestArgs": [
+        "--no-cov"
+    ],
 }
