--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
 install:
     - pip install -r requirements.txt
     - pip install codecov
+    - pip install codacy-coverage
 script: make test
 after_success:
     - codecov
+    - python-codacy-coverage -r coverage.xml
